# learn-rag-ai-agent

./: 10章.ipynb  10章.py  3章.ipynb  4章.ipynb  5章.ipynb  6章.ipynb  7章.ipynb  9章.ipynb  pyproject.toml  requirements_document_generator.py
saved_testsets/: testset_20250406_062246.json  testset_20250406_062246.pkl
