[tool.poetry]
name = "learn-rag-ai-agent"
version = "0.1.0"
description = "learn-rag-ai-agent"
authors = ["shuntagami <shuntagami23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.70.0"
python-dotenv = "^1.1.0"
langchain-core = "^0.3.49"
langchain-openai = "^0.3.11"
dotenv = "^0.9.9"
langchain-community = "^0.3.20"
gitpython = "^3.1.44"
langchain-text-splitters = "^0.3.7"
langchain-chroma = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
